--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,4 +1,12 @@
 @import "~bootstrap/scss/bootstrap";
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
+}
 
 /* HEADER */
 header {
@@ -59,5 +67,51 @@ header {
         font-weight: 800;
         position: absolute;
         bottom: -18px;
+    }
+}
+
+/* MAIN */
+.cover_container {
+    height: 200px;
+    width: 100%;
+
+    img {
+        height: 200px;
+        object-fit: cover;
+        object-position: top;
+    }
+}
+
+.load_button {
+    display: inline-block;
+    background-color: #0282f9;
+    padding: 10px 60px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+/* SUBMAIN */
+.bg-cian {
+    background-color: #0282f9;
+    position: relative;
+    z-index: 999;
+
+    ul {
+        list-style-type: none;
+        justify-content: space-between;
+        padding: 50px;
+
+        li {
+            align-items: center;
+
+            .submain_images {
+                width: 45px;
+                margin-right: 10px;
+            }
+
+            span {
+                text-transform: uppercase;
+            }
+        }
     }
 }
